--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MW Filmes</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+        crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./src/css/global.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="container">
+            <a href="#">Home</a>
+            <a href="#">Filmes</a>
+            <a href="#">Series</a>
+            <a href="#">Animes</a>
+        </nav>
+    </header>
+
+    <main class="container">
+        
+    </main>
 </body>
+
 </html>
