--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="container">
             <a href="#">Home</a>
-            <a href="#">Filmes</a>
+            <a href="filmes.html">Filmes</a>
             <a href="#">Series</a>
             <a href="#">Animes</a>
         </nav>
