--- a/filmes.html
+++ b/filmes.html
@@ -32,7 +32,7 @@
             <div class="row">
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="card-filme">
+                    <div class="card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
                             alt="poster the witcher">
                         <div class="card-description">
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="card-filme">
+                    <div class="card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
                             alt="poster the witcher">
                         <div class="card-description">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="card-filme">
+                    <div class="card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
                             alt="poster the witcher">
                         <div class="card-description">
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3" >
-                    <div class="card-filme">
+                    <div class="card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
                             alt="poster the witcher">
                         <div class="card-description">
