--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
 <body>
 
+    <header>
+        <nav class="container">
+            <h1>Bilheteria 2023</h1>
+            <ul class="container-pages">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Filmes</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+            <div class="contact-container">
+                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">/Projeto</a>
+            </div>
+
+        </nav>
+    </header>
+
+
 </body>
 
 </html>
