--- a/index.html
+++ b/index.html
@@ -27,6 +27,52 @@
         </nav>
     </header>
 
+    <main>
+        <section id="card-list" class="container">
+
+
+            <div class="row">
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ctMserH8g2SeOAnCw5gFjdQF8mo.jpg"
+                            alt="Poster Barbie">
+
+                        <div class="card-description">
+                            <div class="card-description-title">
+                                <h3>Barbie</h3>
+                                <h4>US$ 1,4 bilhão</h4>
+
+                            </div>
+                            <div class="card-description-bottom">
+                                <a class="btn" href="https://youtu.be/Ujs1Ud7k49M?si=RP8GfMTzzuNskM2q" target="_blank">Trailer</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/9n2tJBplPbgR2ca05hS5CKXwP2c.jpg"
+                            alt="Poster Mario">
+
+                        <div class="card-description">
+                            <div class="card-description-title">
+                                <h3>Super Mario Bros. O Filme </h3>
+                                <h4>US$ 1,3 bilhão</h4>
+
+                            </div>
+                            <div class="card-description-bottom">
+                                <a class="btn" href="https://youtu.be/wkn-Gb-Fhac?si=N9dhgRz-9EEXnbFk" target="_blank">Trailer</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+        </section>
+    </main>
+
 
 </body>
 
