Adicionando card Oppenheimer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,24 @@
                     </div>
                 </div>
 
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/fm6KqXpk3M2HVveHwCrBSSBaO0V.jpg"
+                            alt="Poster Oppenheimer">
+
+                        <div class="card-description">
+                            <div class="card-description-title">
+                                <h3> Oppenheimer </h3>
+                                <h4>US$ 894 milhões</h4>
+
+                            </div>
+                            <div class="card-description-bottom">
+                                <a class="btn" href="https://youtu.be/kEGlCYF5gaU?si=O97aLZSPi7efeJNU" target="_blank">Trailer</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
         </section>
     </main>
