Criando página filmes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="container">
             <h1>Bilheteria 2023</h1>
             <ul class="container-pages">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Filmes</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="Filme.html">Filmes</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
             <div class="contact-container">
