destaque de página

--- a/Filme.html
+++ b/Filme.html
@@ -17,7 +17,7 @@
             <h1>Bilheteria 2023</h1>
             <ul class="container-pages">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="Filme.html">Filmes</a></li>
+                <li><a href="Filme.html" class="pagina-link">Filmes</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
             <div class="contact-container">
@@ -26,6 +26,27 @@
 
         </nav>
     </header>
+
+    <main>
+
+        <section class="container">
+
+            <div class="row">
+
+                <div class="details-card-filme">
+                    <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/c0DCmfC7Et2K3URnIJ4ahJpeXR2.jpg" alt="Poster Oppenheimer">
+
+                    <h3>Oppenheimer</h3>
+                    <div >
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
 
 </body>
