--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="container">
             <h1>Bilheteria 2023</h1>
             <ul class="container-pages">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html" class="pagina-link">Início</a></li>
                 <li><a href="Filme.html">Filmes</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
