alterando nome da página filme para visão geral

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Bilheteria 2023</h1>
             <ul class="container-pages">
                 <li><a href="index.html" class="pagina-link">Início</a></li>
-                <li><a href="Filme.html">Filmes</a></li>
+                <li><a href="Filme.html">Visão Geral</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
             <div class="contact-container">
@@ -42,7 +42,11 @@
                             <div class="card-description-title">
                                 <h3>Barbie</h3>
                                 <h4>US$ 1,4 bilhão</h4>
-
+                            </div>
+                            
+                            <div class="avaliacao">
+                                <img src="img/star-full.svg" alt="star">
+                                <h4>7,0 IMDB</h4>
                             </div>
                             <div class="card-description-bottom">
                                 <a class="btn" href="https://youtu.be/Ujs1Ud7k49M?si=RP8GfMTzzuNskM2q" target="_blank">Trailer</a>
@@ -60,7 +64,11 @@
                             <div class="card-description-title">
                                 <h3>Super Mario Bros. O Filme </h3>
                                 <h4>US$ 1,3 bilhão</h4>
+                            </div>
 
+                            <div class="avaliacao">
+                                <img src="img/star-full.svg" alt="star">
+                                <h4>7,1 IMDB</h4>
                             </div>
                             <div class="card-description-bottom">
                                 <a class="btn" href="https://youtu.be/wkn-Gb-Fhac?si=N9dhgRz-9EEXnbFk" target="_blank">Trailer</a>
@@ -77,8 +85,13 @@
                         <div class="card-description">
                             <div class="card-description-title">
                                 <h3> Oppenheimer </h3>
-                                <h4>US$ 894 milhões</h4>
+                                <h4>US$ 952,6 milhões</h4>
 
+                            </div>
+
+                            <div class="avaliacao">
+                                <img src="img/star-full.svg" alt="star">
+                                <h4>8,4 IMDB</h4>
                             </div>
                             <div class="card-description-bottom">
                                 <a class="btn" href="https://youtu.be/kEGlCYF5gaU?si=O97aLZSPi7efeJNU" target="_blank">Trailer</a>
