--- a/Filme.html
+++ b/Filme.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/filme.css">
     <title>Bilheteria 2023</title>
 </head>
 
@@ -17,7 +18,7 @@
             <h1>Bilheteria 2023</h1>
             <ul class="container-pages">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="Filme.html" class="pagina-link">Filmes</a></li>
+                <li><a href="Filme.html" class="pagina-link">Visão Geral</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
             <div class="contact-container">
@@ -33,14 +34,21 @@
 
             <div class="row">
 
-                <div class="details-card-filme">
-                    <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/c0DCmfC7Et2K3URnIJ4ahJpeXR2.jpg" alt="Poster Oppenheimer">
+                <div class="filme-card container">
+                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/c0DCmfC7Et2K3URnIJ4ahJpeXR2.jpg" alt="Capa do Filme">
+                    <div class="info">
+                      <h2>Oppenheimer</h2>
+                      <p>Ano: <span class="ano">2023</span></p>
+                      <p>Diretor: <span class="diretor">Christopher Nolan</span></p>
+                      <p>Gênero: <span class="genero">Drama, História</span></p>
+                      <p>Descrição: <span class="descricao">A história do físico americano J. Robert Oppenheimer, seu papel no Projeto Manhattan e no desenvolvimento da bomba atômica durante a Segunda Guerra Mundial, e o quanto isso mudaria a história do mundo para sempre.
 
-                    <h3>Oppenheimer</h3>
-                    <div >
-
+                      </span></p>
+                      <p>Orçamento: <span>US$ 100 milhões</span></p>
+                      <p>Bilheteria: <span>US$ 952,6 milhões</span></p>
+                      <p>Disponível: <span>YouTube Movies, Google Play Filmes, Apple TV</span></p>
                     </div>
-                </div>
+                  </div>
 
             </div>
 
