Adicionando card feedback na página contato

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="container-pages">
                 <li><a href="index.html" class="pagina-link">Início</a></li>
                 <li><a href="Filme.html">Visão Geral</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
             <div class="contact-container">
                 <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">/Projeto</a>
