Adicionando 2 cards de filmes na página visão geral

--- a/Filme.html
+++ b/Filme.html
@@ -22,7 +22,8 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
             <div class="contact-container">
-                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">/Projeto</a>
+                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw "
+                    target="_blank">/Projeto</a>
             </div>
 
         </nav>
@@ -35,20 +36,65 @@
             <div class="row">
 
                 <div class="filme-card container">
-                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/c0DCmfC7Et2K3URnIJ4ahJpeXR2.jpg" alt="Capa do Filme">
+                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/yRRuLt7sMBEQkHsd1S3KaaofZn7.jpg"
+                        alt="Capa do Filme">
                     <div class="info">
-                      <h2>Oppenheimer</h2>
-                      <p>Ano: <span class="ano">2023</span></p>
-                      <p>Diretor: <span class="diretor">Christopher Nolan</span></p>
-                      <p>Gênero: <span class="genero">Drama, História</span></p>
-                      <p>Descrição: <span class="descricao">A história do físico americano J. Robert Oppenheimer, seu papel no Projeto Manhattan e no desenvolvimento da bomba atômica durante a Segunda Guerra Mundial, e o quanto isso mudaria a história do mundo para sempre.
+                        <h2>Barbie</h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Greta Gerwig</span></p>
+                        <p>Gênero: <span class="genero">Comédia, Aventura, Fantasia</span></p>
+                        <p>Descrição: <span class="descricao">No mundo mágico das Barbies, "Barbieland", uma das bonecas
+                                começa a perceber que não se encaixa como as outras. Depois de ser expulsa, ela parte
+                                para uma aventura no "mundo real", onde descobre que a beleza está no interior de cada
+                                um.
 
-                      </span></p>
-                      <p>Orçamento: <span>US$ 100 milhões</span></p>
-                      <p>Bilheteria: <span>US$ 952,6 milhões</span></p>
-                      <p>Disponível: <span>YouTube Movies, Google Play Filmes, Apple TV</span></p>
+                            </span></p>
+                        <p>Orçamento: <span>US$ 300 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 1,4 bilhão</span></p>
+                        <p>Disponível: <span>Amazon Prime, ClaroTV+, Google Play, Microsoft, YouTube, SKY, Vivo Play e
+                                iTunes,</span></p>
                     </div>
-                  </div>
+                </div>
+
+                <div class="filme-card container">
+                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/ktU3MIeZtuEVRlMftgp0HMX2WR7.jpg"
+                        alt="Capa do Filme">
+                    <div class="info">
+                        <h2>Super Mario Bros. O Filme</h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Michael Jelenic</span></p>
+                        <p>Gênero: <span class="genero">Animação, Família, Aventura, Fantasia, Comédia</span></p>
+                        <p>Descrição: <span class="descricao">Os irmãos Mario e Luigi, de ascendência italiana, vivem em
+                                Brooklyn (Nova Iorque), onde trabalham como canalizadores. Certo dia, durante um serviço
+                                de reparação de uma conduta de água, são sugados por um tubo e transportados para o
+                                Reino Cogumelo, um universo paralelo governado pela Princesa Peach. Sem saber do
+                                paradeiro do irmão, Mario vai ter de aprender a sobreviver naquele lugar, adquirindo
+                                capacidades bizarras mas que serão grandes mais-valias para destruir os planos de
+                                Bowser, um verdadeiro vilão que tenciona dominar o mundo
+
+                            </span></p>
+                        <p>Orçamento: <span>US$ 100 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 1,3 bilhão</span></p>
+                        <p>Disponível: <span> App Store, Google Play e também nas operadoras de TV à cabo.</span></p>
+                    </div>
+                </div>
+
+                <div class="filme-card container">
+                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/c0DCmfC7Et2K3URnIJ4ahJpeXR2.jpg"
+                        alt="Capa do Filme">
+                    <div class="info">
+                        <h2>Oppenheimer</h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Christopher Nolan</span></p>
+                        <p>Gênero: <span class="genero">Drama, História</span></p>
+                        <p>Descrição: <span class="descricao">A história do físico americano J. Robert Oppenheimer, seu
+                                papel no Projeto Manhattan e no desenvolvimento da bomba atômica durante a Segunda
+                                Guerra Mundial, e o quanto isso mudaria a história do mundo para sempre.</span></p>
+                        <p>Orçamento: <span>US$ 100 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 952,6 milhões</span></p>
+                        <p>Disponível: <span>YouTube Movies, Google Play Filmes, Apple TV</span></p>
+                    </div>
+                </div>
 
             </div>
 
