--- a/index.html
+++ b/index.html
@@ -189,6 +189,28 @@
                     </div>
                 </div>
 
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/628Dep6AxEtDxjZoGP78TsOxYbK.jpg"
+                            alt="Poster da Missão Impossível">
+
+                        <div class="card-description">
+                            <div class="card-description-title">
+                                <h3>Missão: Impossível — Acerto de Contas Parte 1</h3>
+                                <h4>US$ 567 milhões</h4>
+                            </div>
+                            
+                            <div class="avaliacao">
+                                <img src="img/star-full.svg" alt="star">
+                                <h4> 7,8 IMDB</h4>
+                            </div>
+                            <div class="card-description-bottom">
+                                <a class="btn" href="https://youtu.be/2m1drlOZSDw?si=ybTYvmsXnvMGChKR" target="_blank">Trailer</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </section>
     </main>
 
