--- a/Filme.html
+++ b/Filme.html
@@ -96,6 +96,26 @@
                     </div>
                 </div>
 
+                <div class="filme-card container">
+                    <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/4yycSPnchdNAZirGkmCYQwTd3cr.jpg"
+                        alt="Capa do Filme">
+                    <div class="info">
+                        <h2>Guardiões da Galáxia Vol. 3</h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">James Gunn</span></p>
+                        <p>Gênero: <span class="genero">Ficção científica, Aventura, Ação</span></p>
+                        <p>Descrição: <span class="descricao">Peter Quill, que ainda está se recuperando da perda de
+                                Gamora, tem que reunir a sua equipe para defender o universo e proteger um dos seus. Uma
+                                missão que, se não for concluída com sucesso, pode levar ao fim dos Guardiões como os
+                                conhecemos.
+
+                            </span></p>
+                        <p>Orçamento: <span>US$ 250 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 845 milhões</span></p>
+                        <p>Disponível: <span>Disney+</span></p>
+                    </div>
+                </div>
+
             </div>
 
         </section>
