Adicionando card de filmes na aba visão geral

--- a/Filme.html
+++ b/Filme.html
@@ -116,8 +116,46 @@
                     </div>
                 </div>
 
-            </div>
+                <div class="filme-card container">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/4XM8DUTQb3lhLemJC51Jx4a2EuA.jpg"
+                        alt="Capa do Filme">
+                    <div class="info">
+                       <h2>Velozes e Furiosos 10</h2>
+                       <p>Ano: <span class="ano">2023</span></p>
+                       <p>Diretor: <span class="diretor">Louis Leterrier</span></p>
+                       <p>Gênero: <span class="genero">Ação, Crime, Thriller</span></p>
+                       <p>Descrição: <span class="descricao">O fim da estrada está chegando. Velozes & Furiosos 10,
+                           é o décimo filme da franquia Velozes & Furiosos, lança os capítulos finais de uma grande saga,
+                           uma das mais famosas e populares do cinema, agora com sua terceira década e ainda mais forte. 
+                           Com o mesmo elenco e personagens principais de quando começou. Ao longo de muitas missões e lutando contra 
+                           todos os obstáculos impossíveis, Dom Toretto (Vin Diesel) e sua família foram mais espertos, mais furiosos e 
+                           mais rápidos do que todos os inimigos em seu caminho. Agora, eles enfrentam o seu oponente mais letal: uma ameaça 
+                           terrível das sombras do passado, alimentada por sede de vingança e determinada a destruir esta família.
+                       </span></p>
+                       <p>Orçamento: <span>US$ 340 milhões</span></p>
+                       <p>Bilheteria: <span>US$ 704 milhões</span></p>
+                       <p>Disponível: <span>Google Play, Apple TV, YouTube e Amazon Prime.</span></p>
+                    </div>
+                </div>
 
+                <div class="filme-card container">
+                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/4HodYYKEIsGOdinkGi2Ucz6X9i0.jpg"
+                          alt="Capa do Filme">
+                    <div class="info">
+                        <h2>Homem Aranha: Através do Aranhaverso</h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Justin K. Thompson, Joaquim Dos Santos e Kemp Powers</span></p>
+                        <p>Gênero: <span class="genero">Animação, Ação, Aventura, Ficção científica</span></p>
+                        <p>Descrição: <span class="descricao">Miles Morales retorna para o próximo capítulo da saga do Aranhaverso, 
+                            uma aventura épica que transportará o Homem-Aranha em tempo integral e amigável do bairro do Brooklyn através do 
+                            Multiverso para unir forças com Gwen Stacy e uma nova equipe de Homens-Aranha para enfrentar com um vilão mais poderoso 
+                            do que qualquer coisa que eles já encontraram.</span></p>
+                        <p>Orçamento: <span>US$ 100 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 690 milhões</span></p>
+                        <p>Disponível: <span>Amazon Prime, Google Play Filmes, Apple TV e HBO Max.</span></p>
+                     </div>
+                </div>
+            </div>  
         </section>
 
     </main>
