Adicionando dois cards de filmes na página visão geral

--- a/Filme.html
+++ b/Filme.html
@@ -155,6 +155,43 @@
                         <p>Disponível: <span>Amazon Prime, Google Play Filmes, Apple TV e HBO Max.</span></p>
                      </div>
                 </div>
+
+                <div class="filme-card container">
+                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7VEUOEfRzzrQfWddlIyLUKvh6Nf.jpg"
+                          alt="Capa do Filme">
+                    <div class="info">
+                        <h2>A Pequena Sereia</h2></h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Rob Marshall</span></p>
+                        <p>Gênero: <span class="genero">Aventura, Família, Fantasia, Romance</span></p>
+                        <p>Descrição: <span class="descricao">Ariel é uma curiosa sereia que deseja experimentar 
+                            a vida em terra firme e, contra a vontade de seu pai, visita a superfície. Ariel se vê 
+                            em uma inesperada jornada de autodescoberta ao encontrar um príncipe, uma bruxa do mar e 
+                            um novo mundo incrível.</span></p>
+                        <p>Orçamento: <span>US$ 297 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 569 milhões</span></p>
+                        <p>Disponível: <span>YouTube e Disney+.</span></p>
+                     </div>
+                </div>
+
+                <div class="filme-card container">
+                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/628Dep6AxEtDxjZoGP78TsOxYbK.jpg"
+                          alt="Capa do Filme">
+                    <div class="info">
+                        <h2>Missão: Impossível - Acerto de Contas Parte 1 </h2></h2>
+                        <p>Ano: <span class="ano">2023</span></p>
+                        <p>Diretor: <span class="diretor">Christopher McQuarrie</span></p>
+                        <p>Gênero: <span class="genero">Ação, Thriller</span></p>
+                        <p>Descrição: <span class="descricao">Ethan Hunt e sua equipe embarcam em sua missão mais perigosa: 
+                            rastrear uma nova arma aterrorizante que ameaça toda a humanidade antes que caia em mãos erradas. 
+                            Com o controle do futuro e o destino do mundo em jogo e as forças sombrias do passado de Ethan se 
+                            aproximando, uma corrida mortal ao redor do globo começa. Confrontado por um inimigo misterioso 
+                            e todo-poderoso, Ethan é forçado a considerar que nada pode importar mais do que sua missão – nem 
+                            mesmo a vida daqueles com quem ele mais se importa.</span></p>
+                        <p>Orçamento: <span>US$ 291 milhões</span></p>
+                        <p>Bilheteria: <span>US$ 567 milhões</span></p>
+                        <p>Disponível: <span>YouTube, Amazon Prime, Google Play Filmes e Apple TV.</span></p>
+                     </div>
             </div>  
         </section>
 
