--- a/Filme.html
+++ b/Filme.html
@@ -8,6 +8,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/filme.css">
+    <link rel="shortcut icon" href="img/icone-estrela.ico" type="image/x-icon">
     <title>Bilheteria 2023</title>
 </head>
 
@@ -23,7 +24,7 @@
             </ul>
             <div class="contact-container">
                 <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw "
-                    target="_blank">/Projeto</a>
+                    target="_blank"><img src="img/github 1.svg" alt="github"></a>
             </div>
 
         </nav>
