--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/filme.css">
+    <link rel="shortcut icon" href="img/icone-estrela.ico" type="image/x-icon">
     <title>Bilheteria 2023</title>
     <style>
        
@@ -65,7 +66,9 @@
                 <li><a href="contato.html" class="pagina-link">Contato</a></li>
             </ul>
             <div class="contact-container">
-                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">/Projeto</a>
+                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">
+                  <img src="img/github 1.svg" alt="github">
+                </a>
             </div>
 
         </nav>
