--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
             <div class="contact-container">
-                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank">/Projeto</a>
+                <a href="https://github.com/Gerencia-de-configuracao-e-mudancas/projeto-final-mw " target="_blank"><img src="img/github 1.svg" alt="github"></a>
             </div>
 
         </nav>
